Fixing layout issues

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -29,7 +29,7 @@
 }
 
 #welcome-panel p {
-	padding-right: 5%;
+	padding-right: 15%;
 }
 
 #welcome-panel .boxLink {
@@ -42,6 +42,7 @@
 	display: inline-block;                      
 	background-color: #A0A0A0;
 	margin-top: 20px;
+	margin-left: 10%;
 }
 
 #twitter-board{
@@ -75,6 +76,10 @@
 	text-align: center;
 	padding-top: 15px;
 	margin-bottom: 30px;
+}
+
+#links-board li a:hover {
+	font-weight: bold;
 }
 
 #twitter-wlinks {
