--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -38,7 +38,7 @@ nav a {
 	background-color: $navBlack;
 	margin-right: -0.5%;
 	margin-top: auto;
-	padding: 0% 1% 0.5% 1%;
+	padding: 0% 1% 0% 1%;
 	color: white;
 	text-align: center;
 	text-decoration: none;
@@ -57,7 +57,7 @@ nav a:hover {
 nav img {
 	display: block;
 	float: left;
-	max-width: 10%;
+	max-width: 8%;
 	min-width: 5%;
 	margin-left: -17%;
 }
@@ -138,7 +138,7 @@ ul {
 .dropdown-content {
 	display: none;
 	position: absolute;
-	min-width: 20%;
+	min-width: 15.8%;
 	z-index: 1;
 	margin-left: 15%;
 }
