--- a/_sass/people.scss
+++ b/_sass/people.scss
@@ -6,7 +6,7 @@
 }
 
 #people .pCatagory h1 {
-	margin-top: 1%;
+	margin-top: 0.5%;
 }
 
 #people ul a {
